--- a/client/theme.less
+++ b/client/theme.less
@@ -10,9 +10,9 @@
 
 .wrapper {
     max-width: 100%;
-    padding: 0 5px;
+    //padding: 0 5px;
     &-content {
-        height: 700px;
+        height: 720px;
         border-radius: 5px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         position: relative;
@@ -47,7 +47,7 @@
                 }
             }
             .dropdown-filter {
-                margin-top: 15px;
+                margin: 15px 0;
                 div.ant-select-selector {
                     background: linear-gradient(
                         rgba(24, 32, 79, 0.4) 0%,
@@ -75,11 +75,12 @@
 
             &-list {
                 overflow: auto;
-                max-height: 460px;
+                max-height: 450px;
+                min-width: 370px;
 
                 &-item {
                     margin: 15px 0;
-                    padding: 8px 15px;
+                    padding: 5px 15px;
                     border-radius: 5px;
                     background: rgba(15, 14, 71, 0.3);
                     box-shadow: rgb(255 255 255 / 20%) 0px 0px 0px 0.5px inset;
@@ -151,6 +152,9 @@
                         }
                     }
                 }
+                &-item:first-child {
+                    margin-top: 0;
+                }
             }
         }
         .footer-info {
@@ -176,7 +180,7 @@
 
 .head-bar {
     color: #fff;
-    height: 110px;
+    height: 120px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     background: linear-gradient(
@@ -191,10 +195,19 @@
     justify-content: space-between;
     &-title {
         font-size: 1.3em;
-
+        display: flex;
+        .anticon {
+            margin-top: 5px;
+        }
         &-text {
-            margin: 0 10px;
+            text-transform: uppercase;
             font-weight: 300;
+        }
+        &-align {
+            margin: 0 10px;
+            span {
+                display: block;
+            }
         }
     }
 
@@ -203,8 +216,8 @@
             padding: 0;
             .anticon {
                 svg {
-                    width: 20px;
-                    height: 20px;
+                    width: 24px;
+                    height: 24px;
                 }
             }
         }
